fixed scrollbar glitch

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,6 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 @media (prefers-color-scheme: light) {
